Add Jira task creation command and update README.md
- Introduced a new command `confluence:task` to create Jira tasks via prompts, enhancing the CLI functionality.
- Updated README.md to include detailed instructions for the new Jira task command and its usage.
- Enhanced Confluence API client with additional methods for fetching page metadata and content.
- Improved inline tag parsing and storage HTML processing for better markdown conversion.
- Added verbose logging option in the download command for debugging purposes.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "confluence:download": "tsx tools/confluence/cli.ts download",
     "confluence:upload": "tsx tools/confluence/cli.ts upload",
     "confluence:create": "tsx tools/confluence/cli.ts create",
+    "confluence:task": "tsx tools/confluence/cli.ts task",
     "test:unit": "vitest run"
   },
   "author": "",
