Refactor semantic release configuration in .releaserc.json
- Removed unnecessary "pkgRoot" property from the npm plugin configuration, streamlining the release setup.

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -28,8 +28,7 @@
     [
       "@semantic-release/npm",
       {
-        "npmPublish": true,
-        "pkgRoot": "dist"
+        "npmPublish": true
       }
     ],
     [
