--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tobisk/confluence-tools",
-  "version": "0.0.0-development",
+  "version": "0.0.1-development",
   "type": "module",
   "main": "dist/cli.js",
   "bin": {
@@ -8,6 +8,7 @@
   },
   "files": [
     "dist",
+    ".docs",
     "README.md",
     "LICENSE"
   ],
