--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tobisk/confluence-tools",
-  "version": "0.0.1-development",
+  "version": "0.0.2-development",
   "type": "module",
   "main": "dist/cli.js",
   "bin": {
@@ -18,6 +18,10 @@
   "author": "Tobias S. Keller",
   "license": "MIT",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tobisk/confluence-toolbelt.git"
+  },
   "engines": {
     "node": ">=18"
   },
@@ -30,13 +34,13 @@
     "@semantic-release/release-notes-generator": "^14.0.1",
     "@types/node": "^22.7.5",
     "conventional-changelog-conventionalcommits": "^7.0.2",
-    "dotenv": "^16.4.5",
     "semantic-release": "^24.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "vitest": "^4.0.4"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "enquirer": "^2.4.1",
     "jsdom": "^25.0.1",
     "linkedom": "^0.18.7",
