--- a/.releaserc.json
+++ b/.releaserc.json
@@ -21,9 +21,22 @@
       }
     ],
     [
+      "@semantic-release/npm",
+      {
+        "npmPublish": true
+      }
+    ],
+    [
       "@semantic-release/exec",
       {
         "prepareCmd": "npm run build"
+      }
+    ],
+    [
+      "@semantic-release/git",
+      {
+        "assets": ["CHANGELOG.md", "package.json", "package-lock.json"],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
     [
@@ -32,13 +45,6 @@
         
           "assets": []
         
-      }
-    ],
-    [
-      "@semantic-release/git",
-      {
-        "assets": ["CHANGELOG.md", "package.json"],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ]
   ]
