feat: enhance download functionality and README updates
- Added support for downloading Confluence pages directly from URLs, including custom file paths.
- Improved file naming convention to include custom paths and last published dates.
- Implemented automatic git commits for downloaded files to maintain version history.
- Updated README.md to reflect new features and usage instructions.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,9 +35,9 @@ jobs:
               run: npm ci
 
             # semantic-release runs from the repo root; build is triggered by .releaserc (prepare step)
+            # NODE_AUTH_TOKEN is used by setup-node for npm authentication
             - name: Run semantic-release
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+                  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
               run: npx semantic-release --repository-url "${{ github.server_url }}/${{ github.repository }}.git"
